--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -44,7 +44,7 @@ html(lang="en")
             div(class="header-wrapper pure-g")
                 div(class="header-global")
                     div(class="header-logo")
-                        a(href="https://www.gov.uk", title="Go to the GOV.UK homepage", id="logo", class="content hmppslogo")
+                        a(href="/", title="Go to the homepage", id="logo", class="content hmppslogo")
                             img(src="/public/images/hmpps_logo_small.png", width="54", height="48", alt="")
                             span  HMPPS
                 if user
