--- a/server/views/send/ROtoCA.pug
+++ b/server/views/send/ROtoCA.pug
@@ -18,7 +18,12 @@ div.pure-g
 
             if submissionTarget.phones
                 each phone in submissionTarget.phones
-                    div.bold.smallPaddingTop Tel: #{phone.number}
+                    div.bold.smallPaddingTop
+                        if phone.type
+                            | #{phone.type}:
+                        else
+                            | Tel:
+                        |  #{phone.number}
 
             div.paddingBottom
                 if submissionTarget.email
