Fix broken path links

--- a/server/views/licenceConditions/conditionsSummaryForm.pug
+++ b/server/views/licenceConditions/conditionsSummaryForm.pug
@@ -10,5 +10,5 @@ block content
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
-            a#continueBtn.requiredButton.button(href=nextPath + nomisId role="button") Save and continue
+            a#continueBtn.requiredButton.button(href=nextPath.path + nomisId role="button") Save and continue
             a#editLink.smallMarginTop(href="/hdc/taskList/" + nomisId role="button") Back to tasklist
