--- a/server/views/proposedAddress/confirmAddressForm.pug
+++ b/server/views/proposedAddress/confirmAddressForm.pug
@@ -13,5 +13,5 @@ block content
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
-            a#continueBtn.requiredButton.button(href=nextPath + nomisId role="button") Save and continue
+            a#continueBtn.requiredButton.button(href=nextPath.path + nomisId role="button") Save and continue
             a#editLink.smallMarginTop(href="/hdc/proposedAddress/curfewAddress/" + nomisId role="button") Edit details
