--- a/server/views/proposedAddress/confirmAddressForm.pug
+++ b/server/views/proposedAddress/confirmAddressForm.pug
@@ -8,7 +8,7 @@ block content
 
         h2.heading-large Confirm address details
 
-
+        -var address = data
         include ./includes/preferredAddress
 
     div.paddingBottom.smallPaddingTop
