--- a/server/views/send/ROtoCA.pug
+++ b/server/views/send/ROtoCA.pug
@@ -7,7 +7,7 @@ div.pure-g
 
         div.bold Prison Case Admin
 
-        if submissionTargets
+        if submissionTarget
             if submissionTarget.premise
                 div#premise.bold #{submissionTarget.premise}
             if submissionTarget.city
