--- a/server/views/curfew/curfewAddressReviewForm.pug
+++ b/server/views/curfew/curfewAddressReviewForm.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
 
-    -var review = data.licenceConditions ? data.licenceConditions.curfewAddressReview : {}
+    -var review = data.curfew ? data.curfew.curfewAddressReview : {}
     -var address = data.proposedAddress ? data.proposedAddress.curfewAddress : {}
 
     div.pure-g.pure-u-1
@@ -35,7 +35,7 @@ block content
                             label(for="hdcConsentNo") No
 
                         div#consentForm.panel.panel-border-narrow.js-hidden
-                            include includes/landlordConsent
+                            include ../licenceConditions/includes/landlordConsent
 
                     div.form-group.inline
                         p Could this person be managed safely at this address?
