split out reporting

--- a/server/views/curfew/curfewAddressReviewForm.pug
+++ b/server/views/curfew/curfewAddressReviewForm.pug
@@ -35,7 +35,7 @@ block content
                             label(for="hdcConsentNo") No
 
                         div#consentForm.panel.panel-border-narrow.js-hidden
-                            include ../licenceConditions/includes/landlordConsent
+                            include includes/landlordConsent
 
                     div.form-group.inline
                         p Could this person be managed safely at this address?
