moved conditions within licenceCondition block

--- a/server/views/licenceDetails/additionalConditions.pug
+++ b/server/views/licenceDetails/additionalConditions.pug
@@ -1,6 +1,6 @@
 h2.heading-medium.borderBottom Additional conditions
 
--var conditions = licence.additionalConditions
+-var conditions = licence.licenceConditions
 
 for condition, index in conditions
     div.pure-g.borderBottomLight.midPaddingTopBottom
