--- a/server/views/licenceDetails/riskManagement.pug
+++ b/server/views/licenceDetails/riskManagement.pug
@@ -1,6 +1,6 @@
 h2.heading-medium.borderBottom.separatorTitle Risk management and victim liaison
 
--var risk = licence.licenceConditions.riskManagement
+-var risk = licence.risk.riskManagement
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
