--- a/server/views/licenceConditions/conditionsSummaryForm.pug
+++ b/server/views/licenceConditions/conditionsSummaryForm.pug
@@ -3,13 +3,13 @@ extends ../layout
 block content
 
     div.largePaddingBottom
-        if licence.additionalConditions && licence.additionalConditions.length > 0
+        if licence.licenceConditions && licence.licenceConditions.length > 0
             include ../licenceDetails/additionalConditions
 
         else
             h2.heading-medium You have not selected any conditions.
 
-    a#addAnother.button.button-secondary.largeMarginBottom(href="/hdc/licenceConditions/additionalConditions/" + nomisId role="button") Add another condition
+    a#addAnother.button.button-secondary.largeMarginBottom(href="/hdc/licenceConditions/additional/" + nomisId role="button") Add another condition
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
