Licence stage and task status logic

--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -41,10 +41,10 @@ table#hdcEligiblePrisoners.largeMarginBottom
                             | #{prisoner.status}
 
                     td
-                        if prisoner.status === 'Started'
-                            a.button.button-secondary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
-                                | Continue
-
                         if prisoner.status === 'Not started'
                             a.button.button-primary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
                                 | Start
+
+                        else
+                            a.button.button-secondary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
+                                | Continue
